--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "firebase": "^9.4.1",
     "rxfire": "^6.0.3",
     "rxjs": "^7.5.5",
-    "sirv-cli": "^2.0.0"
+    "sirv-cli": "^2.0.0",
+    "svelte-navigator": "^3.1.5"
   }
 }
